--- a/ListaSpesaWish/Site/templates/navbar-top.html
+++ b/ListaSpesaWish/Site/templates/navbar-top.html
@@ -20,9 +20,8 @@
                 </a>
             </li>
             <li>
-                <a href="#/library" class="uk-navbar-nav-subtitle">
-                    <i class="fa fa-list"></i> Libreria
-                    <div>hai registrato {{ userCtrl.getCurrentUser().Games }} giochi</div>
+                <a href="#/listaSpesa" class="uk-navbar-nav-subtitle">
+                    <i class="fa fa-list"></i> Lista Spesa                    
                 </a>
             </li>
             <li>
